2001-06-10  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-w3m-dev.el: Remove comment.
	(shimbun-w3m-dev-coding-system): Change iso-2022-jp to euc-jp.

	* shimbun/sb-vinelinux.el: New file.

2001-06-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el (w3m-form-parse-region): Check the value of
	`w3m-current-buffer' to avoid wrong type argument error.

	* w3m.el (w3m-rendering-region): Set `w3m-current-buffer' refered
	in `w3m-form-parse-region'.

2001-06-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-attributes): Remove URL fragments before checking
	its attributes.
	(w3m-retrieve): Remove URL fragments before getting its contents.
	(w3m-w3m-retrieve): Follow changes in `w3m-retrieve'.
	(w3m-arrived-add): Simplified regular expression.
	(w3m-parse-attributes): Changed form spec for edebug.

	* w3m-form.el (w3m-form-parse-region): Set `w3m-current-forms' in
	the buffer `w3m-current-buffer'.

	* mime-w3m.el (mime-w3m-save-background-color): Changed form spec
	for edebug.

2001-06-09  Kiyokazu SUTO  <suto@ks-and-ks.ne.jp>,
	    TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-fontify-anchors): Process w3m internal tag `<_id>'
	which represents ID properties.

2001-06-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-zdnet.el (shimbun-zdnet-expiration-days): Removed.

	* shimbun/sb-netbsd.el (shimbun-get-headers): Fixed order of
	retrieved headers and condition to check whether the target header
	is already retrieved or not.

	* w3m.el (w3m-w3m-retrieve): Remove URL's fragment before checking
	cache.

2001-06-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/shimbun.el (shimbun): Removed slot `use-entire-index'.
	(shimbun-mua::shimbun-mua-use-entire-index): Abolish.
	(shimbun-open): Don't setup `use-entire-index' slot.

	* shimbun/sb-slashdot-jp.el (shimbun-make-contents):
	Decide charset dynamically.

2001-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>
